# grupal

./: CMakeLists.txt  histograma.cpp  histograma.h  main.cpp  prefixSum.cpp  prefixSum.h  utils.h
